Initial commit: BricoPro backend — full service platform
- Task/bidding/matching marketplace core (client-worker services)
- Auth (JWT, OAuth2, refresh tokens), rate limiting, request guards
- Payments (cash + gateway), messaging, notifications, ratings
- Admin, analytics, subscriptions, referrals, offline sync
- 569 tests passing (unit + integration)